# team_t2

./: LICENSE  readme.md
TeamT2_ARC2017_src/: readme.docx
TeamT2_ARC2017_src/t2_motion_planner/: CMakeLists.txt  package.xml
TeamT2_ARC2017_src/t2_motion_planner/config/: custom_rosconsole.conf  motion_planner.yaml
TeamT2_ARC2017_src/t2_motion_planner/include/t2_motion_planner/: capability_names.h  t2_motion_planner.h  t2_robot_model.h
TeamT2_ARC2017_src/t2_motion_planner/launch/: t2_motion_planner.launch
TeamT2_ARC2017_src/t2_motion_planner/src/: t2_motion_planner.cpp  t2_motion_planner_node.cpp
TeamT2_ARC2017_src/t2_planning_scene_updater/: CMakeLists.txt  package.xml
TeamT2_ARC2017_src/t2_planning_scene_updater/config/: custom_rosconsole.conf  planning_scene_updater.yaml
TeamT2_ARC2017_src/t2_planning_scene_updater/include/t2_planning_scene_updater/: capability_names.h  t2_planning_scene_updater.h
TeamT2_ARC2017_src/t2_planning_scene_updater/launch/: t2_planning_scene_updater.launch
TeamT2_ARC2017_src/t2_planning_scene_updater/src/: t2_planning_scene_updater.cpp  t2_planning_scene_updater_node.cpp
TeamT2_ARC2017_src/t2_robot_vision/: CMakeLists.txt  nodelets.xml  package.xml
TeamT2_ARC2017_src/t2_robot_vision/include/: PCA.h  cluster.hpp  cluster_sub.hpp  normal_vector.hpp  robot_vision_calibration.h  robot_vision_capture_realsense.h  robot_vision_findplane.h  robot_vision_manager.h  robot_vision_nodelet.h  robot_vision_occupancy.h  robot_vision_recognition.h  robot_vision_recognition2.h  robot_vision_segment.h  robot_vision_unification.h  seg_common.hpp
TeamT2_ARC2017_src/t2_robot_vision/launch/: vision_main.launch
TeamT2_ARC2017_src/t2_robot_vision/launch/includes/: capture_unit.launch.xml  occupancy_unit.launch.xml  recognition_unit.launch.xml
TeamT2_ARC2017_src/t2_robot_vision/src/: PCA.cpp  VGG16recognition_program.py  cluster.cpp  dist_embed3.py  dist_learning.py  dist_learning_rcg.py  normal_vector.cpp  plane.cpp  recognition_program.py  robot_vision_calibration.cpp  robot_vision_capture_realsense.cpp  robot_vision_findplane.cpp  robot_vision_manager.cpp  robot_vision_nodelet.cpp  robot_vision_occupancy.cpp  robot_vision_recognition.cpp  robot_vision_recognition2.cpp  robot_vision_segment.cpp  robot_vision_tottori.cpp  robot_vision_unification.cpp  seg_ARC_ROS.py  seg_common.cpp
TeamT2_ARC2017_src/t2_robot_vision/src/YOLOv2_master/: yolov2.py  yolov2_predict.py
TeamT2_ARC2017_src/t2_robot_vision/src/YOLOv2_master/data/: label.txt
TeamT2_ARC2017_src/t2_robot_vision/srv/: CadItem.srv  Capture.srv  Conv.srv  ItemCad.srv
TeamT2_ARC2017_src/t2_task_planner/: CMakeLists.txt  package.xml
TeamT2_ARC2017_src/t2_task_planner/arm_data/: seq_move_sample1.csv  seq_move_sample2.csv  seq_move_sample3.csv  test_seqArmDataFilePath.csv  test_seqArmMoveFile_List.csv
TeamT2_ARC2017_src/t2_task_planner/config/: custom_rosconsole.conf  task_planner.yaml  task_strategy.yaml
TeamT2_ARC2017_src/t2_task_planner/config/fix_rp/: rp_1604.yaml  rp_1610.yaml  rp_1615.yaml  rp_1620.yaml  rp_1626.yaml  rp_1637.yaml  rp_1701.yaml  rp_1702.yaml  rp_1703.yaml  rp_1704.yaml  rp_1705.yaml  rp_1706.yaml  rp_1707.yaml  rp_1708.yaml  rp_1709.yaml  rp_1710.yaml  rp_1711.yaml  rp_1712.yaml  rp_1713.yaml  rp_1714.yaml  rp_1715.yaml  rp_1716.yaml  rp_1717.yaml  rp_1718.yaml  rp_1719.yaml  rp_1720.yaml  rp_1721.yaml  rp_1722.yaml  rp_1723.yaml  rp_1724.yaml  rp_1725.yaml  rp_1726.yaml  rp_1727.yaml  rp_1728.yaml  rp_1729.yaml  rp_1730.yaml  rp_1731.yaml  rp_1732.yaml  rp_1733.yaml  rp_1734.yaml  (+9 more)
TeamT2_ARC2017_src/t2_task_planner/include/t2_task_planner/: t2_box_info.h  t2_task_planner.h  t2_task_planner_def.h  t2_task_strategy_common.h  t2_task_strategy_component.h  t2_task_strategy_def.h  t2_task_strategy_def_internal.h  t2_task_strategy_grasp.h  t2_task_strategy_grasp_pack.h  t2_task_strategy_pack.h  t2_task_strategy_viewer.h
TeamT2_ARC2017_src/t2_task_planner/launch/: debug_strategy_gptest.launch  debug_strategy_rviz.launch  demo_gptest.launch  fix_rp.launch.xml  moveit_gptest.rviz  moveit_rviz_gptest.launch  t2_task_planner.launch
TeamT2_ARC2017_src/t2_task_planner/scripts/: gptest_update.py
TeamT2_ARC2017_src/t2_task_planner/src/: t2_box_info.cpp  t2_task_planner.cpp  t2_task_strategy_common.cpp  t2_task_strategy_component.cpp  t2_task_strategy_grasp.cpp  t2_task_strategy_grasp_pack.cpp  t2_task_strategy_pack.cpp  t2_task_strategy_viewer.cpp
TeamT2_ARC2017_src/t2_ui/: CMakeLists.txt  package.xml
TeamT2_ARC2017_src/t2_ui/include/t2_ui/: hitkey.h
TeamT2_ARC2017_src/t2_ui/launch/: t2_ui.launch
TeamT2_ARC2017_src/t2_ui/src/: hitkey.c  t2_ui.cpp
