<?xml version="1.0"?>
<package>
  <name>t2_motion_planner</name>
  <version>0.0.0</version>
  <description>t2_motion_planner package</description>
  <maintainer email="Ksa-rc2017@ml.toshiba.co.jp">Toshiba Corporation, Toshiba Infrastructure Systems &amp; Solutions Corporation</maintainer>
  <license>BSD</license>
  <author>Toshiba Corporation, Toshiba Infrastructure Systems &amp; Solutions Corporation</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>catch_robot_msgs</build_depend>
  <build_depend>t2_msgs</build_depend>
  <build_depend>t2_pinching_gripper</build_depend>
  <build_depend>t2_planning_scene_updater</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>catch_robot_msgs</run_depend>
  <run_depend>t2_msgs</run_depend>
  <run_depend>t2_pinching_gripper</run_depend>
  <run_depend>t2_planning_scene_updater</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roslint</run_depend>
</package>
