<?xml version="1.0"?>
<package>
  <name>t2_task_planner</name>
  <version>0.0.0</version>
  <description>This package provides task planning for t2_robot.</description>
  <maintainer email="Ksa-rc2017@ml.toshiba.co.jp">Toshiba Corporation, Toshiba Infrastructure Systems &amp; Solutions Corporation</maintainer>
  <license>BSD</license>
  <author>Toshiba Corporation, Toshiba Infrastructure Systems &amp; Solutions Corporation</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>t2_robot_msgs</build_depend>
  <build_depend>t2_msgs</build_depend>
  <build_depend>keba_bridge_msgs</build_depend>
  <build_depend>plan_common</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>t2_planning_scene_updater</build_depend>
  <build_depend>t2_motion_planner</build_depend>
  <build_depend>t2_pinching_gripper</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>t2_robot_msgs</run_depend>
  <run_depend>t2_msgs</run_depend>
  <run_depend>keba_bridge_msgs</run_depend>
  <run_depend>plan_common</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometric_shapes</run_depend>
</package>
